# cadence-aria

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.agents/skills/: openspec-apply-change  openspec-archive-change  openspec-explore  openspec-propose  ui-ux-pro-max
.cargo/: config.toml
.claude/rules/: README.md  code-reading.md  code-usage.md  document-storage.md  mcp-servers.md
.claude/skills/: guide-real-e2e-testing  prepare-aria-worktree-dev  start-aria-e2e-worktree  start-cadence-aria-service
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-1-report.md  task-3-report.md
cadence/analysis-docs/: 2026-04-21_分析报告_Aria正式场景真实测试问题清单与修复优先级_v1.0.md  2026-04-21_分析报告_测试矩阵_PR1真实接入人工测试_v1.0.md  2026-04-22_分析报告_Aria选型摘要_ClaudeCode_Codex_spawn_v1.1.md  2026-04-22_分析报告_ClaudeCode_Codex_spawn使用方式与限制调研_v1.1.md  2026-04-23_状态记录_Aria一期文档收敛与实施计划拆分_v1.0.md  2026-04-30_aria_fibonacci_e2e_status.md  2026-05-01_状态记录_Aria_Fibonacci真实E2E继续验证_v1.0.md  2026-05-04_分析报告_N07_design_prompt缺失完整spec内容_v1.0.md  2026-05-04_分析报告_planning节点prompt修复完整覆盖性确认_v1.0.md  2026-05-04_分析报告_state.json_phase状态未同步问题_v1.0.md  2026-05-04_状态记录_Aria_Fibonacci_E2E_两问题修复完成_v1.0.md  2026-05-04_状态记录_Aria_Fibonacci真实E2E_N16上下文修复后暂停_v1.0.md  2026-05-07_状态记录_Aria_Fibonacci真实E2E_main本地Rust与TUI准备_v1.0.md  2026-05-09_分析报告_Aria_Web工作台Plan覆盖Design复核_v1.0.md  2026-05-18_状态记录_product-workbench-issue-lifecycle人工E2E问题_v1.0.md  2026-05-19_分析报告_Workspace执行归集与交叉审核可见性问题总结_v1.0.md  2026-05-19_状态记录_product-workbench-issue-lifecycle正式E2E问题_v1.0.md  2026-05-20_分析报告_ProductWorkbench交互审计与参考项目调研_v1.0.md  2026-05-20_分析报告_Workspace交互设计问题与参考项目分析_v1.0.md  2026-06-10_状态记录_CodingWorkspace测试与代码审查节点问题_v1.0.md
cadence/checklists/: aria-real-integration-checklist.md
cadence/designs-reviews/: 2026-04-17_设计评审_Cadence-Aria一期收敛方案_v1.0.md  2026-04-18_设计评审_Cadence-Aria一期收敛方案落地风险与改版建议_v1.0.md  2026-04-22_设计评审_Aria终端REPL与多Agent编排Runtime设计_v1.0.md  2026-04-24_设计评审_Aria一期技术方案与实施计划_v1.0.md  2026-04-24_设计评审_Aria一期技术方案与实施计划_二次复核修复后问题记录_v1.0.md  2026-04-24_设计评审_Aria一期技术方案与实施计划_二次复核结果_v1.0.md  2026-04-24_设计评审_Aria一期技术方案与实施计划问题记录_v1.0.md  2026-04-26_设计评审_Aria一期方案与实施计划修复后二次Review_v1.0.md  2026-04-26_设计评审_Aria一期方案与实施计划最终Review_v1.0.md  2026-04-26_设计评审_Aria一期方案与实施计划研发可落地性Review_v1.0.md  2026-04-26_设计评审_Aria一期方案与实施计划研发可落地性Review_v2.0.md  2026-04-26_设计评审_Aria一期方案与实施计划研发可落地性Review_v2.1.md  2026-04-26_设计评审_Aria一期方案与实施计划研发可落地性Review_v3.0.md  2026-04-26_设计评审_Aria一期方案与实施计划研发可落地性Review_v4.0.md  2026-04-26_设计评审_Aria一期方案与实施计划研发可落地性Review_v5.0.md  2026-05-28_设计评审_CodingWorkspace二期改造_v1.0.md  2026-06-16_架构评审_WorkItem拆分与Coding计划门禁优化_v1.0.md  2026-06-16_设计评审_WorkItem拆分与Coding计划门禁优化_v1.0.md  2026-06-22_设计评审_WorkItemPlan两阶段生成与逐项WorkItem确认流程_v1.0.md  2026-06-22_设计评审_WorkItemPlan两阶段生成与逐项WorkItem确认流程_v1.1.md  (+2 more)
scripts/: clean-target.sh  make-release-assets.mjs  pack-npm.mjs  smoke-npx.mjs  verify-real-integration.sh
src/: cli.rs  index.ts  lib.rs  main.rs
tests/: approval_gate_handlers.rs  artifact_schema_min_fields.rs  artifact_validate.rs  clarification_record.rs  cli_adapter_baseline.rs  cli_entry.rs  context_builder.rs  daemon_cli_process.rs  daemon_discovery.rs  daemon_lifecycle.rs  design_projection.rs  document_ops.rs  execution_chain_fake_provider.rs  final_closure_fake_provider.rs  final_followup_routes.rs  integration_retry_limit.rs  interactive_checkpoint.rs  interactive_controller.rs  interactive_policy.rs  interactive_projection.rs  it_core.rs  it_interactive.rs  it_product.rs  it_provider.rs  it_task_run.rs  it_web.rs  openspec_bundle.rs  phase1_end_to_end_smoke.rs  phase1_profile.rs  plan_projection.rs  planning_chain_fake_provider.rs  product_coding_attempt_store.rs  product_coding_models.rs  product_coding_workspace_engine.rs  product_git_workspace_service.rs  product_index.rs  product_lifecycle_store.rs  product_runtime_compat.rs  product_test_executor.rs  provider_adapter_baseline.rs  (+42 more)
web/: dev-server-proxy.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vite.config.test.ts  vite.config.ts
(+1264 files in other folders)
