[package]
name = "cadence-aria"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[lib]
name = "cadence_aria"
path = "src/lib.rs"

[[bin]]
name = "aria"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", tag = "rust-v0.124.0" }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", tag = "rust-v0.124.0" }
command-group = { version = "5.0", features = ["with-tokio"] }
futures-util = "0.3"
hex = "0.4.3"
libc = "0.2.177"
mime_guess = "2.0"
pulldown-cmark = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["fs", "trace"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
serde_yaml = "0.9.34"
tempfile = "3.27.0"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["util"] }
